--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "sqlite3": "^5.1.6",
     "bcrypt": "^5.1.1",
-    "jsonwebtoken": "^9.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "openai": "^4.28.0"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "openai": "^4.28.0",
+    "pg": "^8.18.0",
+    "sqlite3": "^5.1.6"
   }
 }
